Fixed token positions and animations
Also made changes to the code to get rid of warnings.